# Job-Booster

./: .dockerignore  .env.example  .gitignore  1 - Vision & Goals.md  2 - Architecture & structures.md  2 - Architecutre & structures.md  3 - Implementation Details.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
.kilo/plans/: 1778278677863-swift-harbor.md
app/: frontend.py  main.py
app/agents/: __init__.py  agents.yaml  base_agent.py  cover-letter-generator.md  cover_letter.py  cv-extractor.md  cv_extractor.py  discovery_sync.py  discovery_tools.py  gap-recommendation.md  gap_recommendation.py  interview-coach.md  interview_coach.py  job-finder.md  job_finder.py  onboarding-agent.md  onboarding.py  outreach-agent.md  outreach_agent.py  profile_loader.py  resume-reviewer.md  resume_reviewer.py  resume_tailor.py  startup_scanner.py  web_tools.py
app/api/: __init__.py  analytics_routes.py  auth_routes.py  ax_routes.py  dashboard_routes.py  discovery_routes.py  gap_recommendation_routes.py  onboarding_routes.py  pipeline_routes.py  recommendation_routes.py  resume_routes.py  scanner_routes.py  search_routes.py  settings_routes.py  tracking_routes.py
app/ax/: __init__.py  tool_registry.py
app/core/: config.py  langfuse_setup.py  llm_config.py  model_registry.py  upload_validation.py
app/langchain_layer/: __init__.py  agents.py  factory.py  graph.py  prompts.py  state.py  tools.py
app/middleware/: auth_middleware.py
app/models/: __init__.py  api_models.py  base_model.py  db_models.py  job_model.py  resume_model.py  startup_model.py
app/pipelines/: __init__.py  engine.py  events.py  graph_engine.py  pipelines.yaml  scheduler.py  state.py
app/prompts/: cover_letter_prompt.md  cv_extractor_prompt.md  gap_recommendation_prompt.md  interview_coach_prompt.md  job_extraction_prompt.md  job_finder_prompt.md  job_parser_prompt.md  onboarding_prompt.md  outreach_prompt.md  resume_parser_prompt.md  resume_reviewer_prompt.md  resume_tailor_prompt.md
app/services/: __init__.py  analytics_service.py  apply_service.py  auth_service.py  bigset_import_service.py  bigset_remote_service.py  career_scraper.py  db_service.py  discovery_query_service.py  embedding_service.py  export_service.py  job_board_scraper.py  job_dedupe.py  job_fit_service.py  llm_service.py  parsing_service.py  recommendation_service.py  scraper_service.py  search_service.py  startup_parser.py  template_engine.py  tracking_service.py  user_profile_service.py  vector_store.py
app/ui/: __init__.py  api_client.py  auth_tab.py  discovery_tab.py  helpers.py  job_boards_tab.py  onboarding_tab.py  pipelines_tab.py  scanner_tab.py
config/: bigset_mappings.yaml
data/: user_profile.yaml.example
data/jobs/: data_scientist.txt  lead_data_scientist.txt  senior_software_engineer.txt  software_developer.txt
data/startups/: startups.md
data/templates/: resume_template.tex
docs/: 1-Vision.md  2-Architecture.md  3-Implementation.md
frontend/: .dockerignore  Dockerfile  middleware.ts  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: gradient-blobs.tsx  page-header.tsx  placeholder-page.tsx  providers.tsx  segmented-progress.tsx  session-provider.tsx  stat-card.tsx
mcps/: README.md
profiles/: __init__.py  bundle.py  bundle.yaml  pipelines.yaml  provider_resolver.py  providers.yaml  schema.yaml
profiles/adapters/: __init__.py  cursor.py  generic.py  opencode.py
profiles/agents/: cover-letter-generator.yaml  cv-extractor.yaml  discovery-sync.yaml  gap-recommendation.yaml  interview-coach.yaml  job-finder.yaml  onboarding-agent.yaml  outreach-agent.yaml  resume-reviewer.yaml  resume-tailor.yaml  (+1 more)
scripts/: healthcheck.sh  run_app.py
tests/: conftest.py  test_ai_layer_integration.py  test_analytics_service.py  test_api.py  test_auth_service.py  test_ax_tool_registry.py  test_bigset_import.py  test_bigset_preview.py  test_bigset_remote.py  test_bigset_remote_routes.py  test_discovery_sync.py  test_embedding_service.py  test_gap_recommendation_agent.py  test_integration_real_llm.py  test_job_fit_service.py  test_job_models.py  test_langchain_layer.py  test_onboarding_agent.py  test_onboarding_lc_layer.py  test_onboarding_routes.py  test_pipeline_background_jobs.py  test_pipeline_run.py  test_profile_runtime_security.py  test_pydantic_graph_engine.py  test_recommendation_service.py  test_resume_models.py  test_scanner_city_filter.py  test_startup_scanner.py  test_tracking_service.py  test_vector_store.py
(+84 files in other folders)
