[project]
name = "job-booster"
version = "1.0.0"
description = "AI-powered startup job scanner and resume tailoring platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Muhammad Z. Ahmed", email = "mozayed007@gmail.com"}
]
keywords = ["ai", "job-scanner", "resume", "startup", "pydantic-ai"]

dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "gradio>=5.0.0",
    
    # AI Agent Stack (Pydantic AI + LiteLLM)
    "pydantic-ai>=0.2.0",
    "litellm>=1.30.0",
    
    # Observability
    "logfire>=0.40.0",
    
    # Web Scraping (TinyFish primary)
    "tinyfish>=0.1.0",
    
    # Database & Validation
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Utilities
    "httpx>=0.27.0",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "fpdf2>=2.8.0",
    "nest-asyncio>=1.6.0",
    "pyyaml>=6.0.0",
    "apscheduler>=3.10.0",
    
    # Vector DB (Qdrant file-based)
    "qdrant-client>=1.12.0",
    
    # Document Processing (LiteParse by LlamaIndex — requires Node.js >= 18)
    "liteparse>=1.0.0",
    "glmocr>=0.1.0",
    "python-docx>=1.0.0",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
crawl4ai = ["crawl4ai>=0.8.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
