[project]
name = "job-booster"
version = "1.0.0"
description = "AI-powered startup job scanner and resume tailoring platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Muhammad Z. Ahmed", email = "mozayed007@gmail.com"}
]
keywords = ["ai", "job-scanner", "resume", "startup", "pydantic-ai"]

dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "gradio>=5.0.0",
    
    # AI Agent Stack (Pydantic AI + LiteLLM)
    "pydantic-ai>=0.2.0",
    "litellm>=1.30.0",

    # LangChain / LangGraph comparison layer
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "langchain-litellm>=0.7.0",
    
    # Observability
    "logfire>=0.40.0",
    
    # Database & Validation
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Utilities
    "httpx>=0.27.0",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "fpdf2>=2.8.0",
    "pyyaml>=6.0.0",
    "apscheduler>=3.10.0",
    
    # Vector DB (Qdrant file-based)
    "qdrant-client>=1.12.0",
    
    # Document Processing (LiteParse by LlamaIndex — requires Node.js >= 18)
    "liteparse>=1.0.0",
    "glmocr>=0.1.0",
    "python-docx>=1.0.0",
    
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
]

[project.optional-dependencies]
crawl4ai = ["crawl4ai>=0.8.0"]
tinyfish = ["tinyfish>=0.1.0"]
langfuse = ["langfuse>=2.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
    "types-python-jose>=3.3.0",
    "types-Markdown>=3.5.0",
    "types-openpyxl>=3.1.0",
    "types-APScheduler>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "tinyfish.*",
    "crawl4ai.*",
    "glmocr.*",
    "gradio.*",
    "liteparse.*",
    "apscheduler.*",
    "pydantic_graph.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = ["integration: requires real API key (deselect with '-m \"not integration\"')"]
